# internal-dns-sync

./: .codeclimate.yml  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  pihole-dns-sync.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  pipeline.yml
deployment/lmserver/: config.example.yml  docker-compose-service.yml  scheduler-job-snippet.yml  scheduler-job.yml
deployment/pihole-1/: internal-dns-sync.service  internal-dns-sync.timer
internal_dns_sync/: config.py  dns_config.py  git.py  main.py  pihole.py
tests/: test_config.py  test_dns_config.py  test_git.py  test_pihole.py
toml-merge/: Cargo.toml
toml-merge/src/: main.rs
